--- a/pss/privileged-containers/resource.yaml
+++ b/pss/privileged-containers/resource.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-baseline-privileged-container
+  name: nginx
 spec:
   containers:
   - name: nginx
@@ -13,7 +13,18 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox-baseline-privileged-container
+  name: nginx-with-version
+spec:
+  containers:
+  - name: nginx
+    image: nginx:1.14.1
+    securityContext:
+      privileged: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: busybox
 spec:
   containers:
   - name: busybox
