Fix background scan mode for policies using request.operation in preconditions
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/argo/application-prevent-default-project/application-prevent-default-project.yaml
+++ b/argo/application-prevent-default-project/application-prevent-default-project.yaml
@@ -24,7 +24,7 @@ spec:
               - Application
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: NotEquals
           value: DELETE
       validate:
