--- a/argo/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
+++ b/argo/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
@@ -28,7 +28,7 @@ spec:
               - AppProject
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: AnyIn
           value: ["CREATE", "UPDATE"]
       validate:
@@ -52,7 +52,7 @@ spec:
               - AppProject
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: AnyIn
           value: ["CREATE", "UPDATE"]
       validate:
