--- a/openshift/unique-routes/unique-routes.yaml
+++ b/openshift/unique-routes/unique-routes.yaml
@@ -32,7 +32,7 @@ spec:
             jmesPath: "items[].spec.host"
       preconditions:
         all:
-          - key: "{{ request.operation }}"
+          - key: "{{ request.operation || 'BACKGROUND' }}"
             operator: NotEquals
             value: "DELETE"
       validate:
