--- a/openshift/validate-routes/check-routes.yaml
+++ b/openshift/validate-routes/check-routes.yaml
@@ -24,7 +24,7 @@ spec:
               - route.openshift.io/v1/Route
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: NotEquals
           value: ["DELETE"]
       validate:
