--- a/other/add_certificates_volume/add_certificates_volume.yaml
+++ b/other/add_certificates_volume/add_certificates_volume.yaml
@@ -28,7 +28,7 @@ spec:
       - key: '{{request.object.metadata.annotations."inject-certs"}}'
         operator: Equals
         value: enabled
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
           - CREATE
