--- a/other/add_default_resources/add-default-resources.yaml
+++ b/other/add_default_resources/add-default-resources.yaml
@@ -27,7 +27,7 @@ spec:
           - Pod
     preconditions:
       any:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
