--- a/other/advanced_restrict_image_registries/advanced-restrict-image-registries.yaml
+++ b/other/advanced_restrict_image_registries/advanced-restrict-image-registries.yaml
@@ -42,7 +42,7 @@ spec:
             namespace: default
       preconditions:
         any:
-        - key: "{{request.operation}}"
+        - key: "{{request.operation || 'BACKGROUND'}}"
           operator: In
           value:
           - CREATE
