--- a/other/allowed_label_changes/allowed-label-changes.yaml
+++ b/other/allowed_label_changes/allowed-label-changes.yaml
@@ -34,7 +34,7 @@ spec:
           - CronJob
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: Equals
         value: UPDATE
     validate:
