--- a/other/block-pod-exec-by-namespace-label.yaml
+++ b/other/block-pod-exec-by-namespace-label.yaml
@@ -27,7 +27,7 @@ spec:
         jmesPath: "metadata.labels.exec"
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: Equals
         value: CONNECT
     validate:
