--- a/other/block-pod-exec-by-namespace.yaml
+++ b/other/block-pod-exec-by-namespace.yaml
@@ -22,7 +22,7 @@ spec:
         - PodExecOptions
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: Equals
         value: CONNECT
     validate:
