--- a/other/block_updates_deletes/block_updates_deletes.yaml
+++ b/other/block_updates_deletes/block_updates_deletes.yaml
@@ -32,7 +32,7 @@ spec:
       deny:
         conditions:
           any:
-            - key: "{{request.operation}}"
+            - key: "{{request.operation || 'BACKGROUND'}}"
               operator: In
               value:
               - DELETE
