--- a/other/check_nvidia_gpu/check-nvidia-gpu.yaml
+++ b/other/check_nvidia_gpu/check-nvidia-gpu.yaml
@@ -27,7 +27,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: NotEquals
         value: DELETE
     validate:
