--- a/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
+++ b/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
@@ -48,7 +48,7 @@ spec:
       deny:
         conditions:
           all:
-          - key: "{{request.operation}}"
+          - key: "{{request.operation || 'BACKGROUND'}}"
             operator: "In"
             value:
             - "UPDATE"
