--- a/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
+++ b/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
@@ -23,7 +23,7 @@ spec:
         - PersistentVolume
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
