--- a/other/limit-hostpath-vols/limit-hostpath-vols.yaml
+++ b/other/limit-hostpath-vols/limit-hostpath-vols.yaml
@@ -31,7 +31,7 @@ spec:
       - key: "{{ request.object.spec.volumes[?hostPath] | length(@) }}"
         operator: GreaterThanOrEquals
         value: 1
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
