--- a/other/limit_containers_per_pod/limit_containers_per_pod.yaml
+++ b/other/limit_containers_per_pod/limit_containers_per_pod.yaml
@@ -27,7 +27,7 @@ spec:
         - StatefulSet
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equal
         value: CREATE
     validate:
@@ -45,7 +45,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equal
         value: CREATE
     validate:
@@ -63,7 +63,7 @@ spec:
         - CronJob
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equal
         value: CREATE
     validate:
