--- a/other/protect_node_taints/protect-node-taints.yaml
+++ b/other/protect_node_taints/protect-node-taints.yaml
@@ -29,7 +29,7 @@ spec:
       - cluster-admin
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
     validate:
