--- a/other/require_emptydir_requests_limits/require-emptydir-requests-limits.yaml
+++ b/other/require_emptydir_requests_limits/require-emptydir-requests-limits.yaml
@@ -30,7 +30,7 @@ spec:
       - key: "{{ request.object.spec.volumes[?contains(keys(@), 'emptyDir')] || '' | length(@) }}"
         operator: GreaterThanOrEquals
         value: 1
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
