--- a/other/require_unique_external_dns/require_unique_external_dns.yaml
+++ b/other/require_unique_external_dns/require_unique_external_dns.yaml
@@ -34,7 +34,7 @@ spec:
             jmesPath: "items[].metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\""
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: In
           value:
             - CREATE
