--- a/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
+++ b/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
@@ -35,7 +35,7 @@ spec:
           jmesPath: "items[?@.metadata.ownerReferences == false || metadata.ownerReferences[?uid != '{{ request.object.metadata.keys(@).contains(@, 'ownerReferences') && request.object.metadata.ownerReferences[0].uid }}']].spec.containers[].securityContext.to_string(runAsUser)"
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: Equals
         value: "CREATE"
     validate:
