--- a/other/restart_deployment_on_secret_change/restart_deployment_on_secret_change.yaml
+++ b/other/restart_deployment_on_secret_change/restart_deployment_on_secret_change.yaml
@@ -33,7 +33,7 @@ spec:
           - default
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
     mutate:
