--- a/other/restrict_ingress_host/restrict_ingress_host.yaml
+++ b/other/restrict_ingress_host/restrict_ingress_host.yaml
@@ -29,7 +29,7 @@ spec:
             jmesPath: "items[].spec.rules[].host"
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: Equals
           value: CREATE
         - key: "{{ request.object.spec.rules[].host }}"
@@ -45,7 +45,7 @@ spec:
             - Ingress
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: Equals
           value: CREATE
         - key: "{{ request.object.spec.rules[].host | length(@)}}"
