--- a/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
@@ -29,7 +29,7 @@ spec:
             jmesPath: "items[?spec.nodeName=='minikube'] | length(@)"
       preconditions:
         any:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: Equals
           value: "CREATE"
       validate:
