--- a/other/scale_deployment_zero/scale_deployment_zero.yaml
+++ b/other/scale_deployment_zero/scale_deployment_zero.yaml
@@ -29,7 +29,7 @@ spec:
           - v1/Pod.status
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
       - key: "{{request.object.status.containerStatuses[0].restartCount}}"
