--- a/other/unique-ingress-paths.yaml
+++ b/other/unique-ingress-paths.yaml
@@ -38,7 +38,7 @@ spec:
             jmesPath: "items[].spec.rules[].http.paths[].path"
       preconditions:
         any:
-        - key: "{{request.operation}}"
+        - key: "{{request.operation || 'BACKGROUND'}}"
           operator: Equals
           value: "CREATE"
       validate:
