--- a/psp-migration/restrict_adding_capabilities/restrict-adding-capabilities.yaml
+++ b/psp-migration/restrict_adding_capabilities/restrict-adding-capabilities.yaml
@@ -29,7 +29,7 @@ spec:
               - Pod
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: NotEquals
           value: DELETE
       validate:
