--- a/tekton/block-tekton-task-runs/block-tekton-task-runs.yaml
+++ b/tekton/block-tekton-task-runs/block-tekton-task-runs.yaml
@@ -29,7 +29,7 @@ spec:
           name: "system:serviceaccount:tekton-pipelines:tekton-pipelines-controller"
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: AnyIn
         value:
         - CREATE
