--- a/other/enforce_resources_as_ratio/enforce-resources-as-ratio.yaml
+++ b/other/enforce_resources_as_ratio/enforce-resources-as-ratio.yaml
@@ -26,7 +26,7 @@ spec:
           - Pod
     preconditions:
       any:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: In
         value:
         - CREATE
