--- a/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
+++ b/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
@@ -28,7 +28,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: In
         value:
         - CREATE
