--- a/other/ingress_host_match_tls/ingress-host-match-tls.yaml
+++ b/other/ingress_host_match_tls/ingress-host-match-tls.yaml
@@ -28,7 +28,7 @@ spec:
           - Ingress
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: CREATE
     validate:
