--- a/other/inject_env_var_from_image_label/inject-env-var-from-image-label.yaml
+++ b/other/inject_env_var_from_image_label/inject-env-var-from-image-label.yaml
@@ -26,7 +26,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: NotEquals
         value: DELETE
     mutate:
