--- a/other/kubernetes_version_check/kubernetes-version-check.yaml
+++ b/other/kubernetes_version_check/kubernetes-version-check.yaml
@@ -26,7 +26,7 @@ spec:
           - Secret
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
