--- a/other/prepend_image_registry/prepend_image_registry.yaml
+++ b/other/prepend_image_registry/prepend_image_registry.yaml
@@ -26,7 +26,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
@@ -46,7 +46,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
