--- a/other/prevent-naked-pods/prevent-naked-pods.yaml
+++ b/other/prevent-naked-pods/prevent-naked-pods.yaml
@@ -28,7 +28,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: NotEquals
         value: DELETE
     validate:
