--- a/other/record-creation-details/record-creation-details.yaml
+++ b/other/record-creation-details/record-creation-details.yaml
@@ -31,7 +31,7 @@ spec:
           - '*'
     preconditions:
       any:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: CREATE
     mutate:
@@ -49,7 +49,7 @@ spec:
             kyverno.io/created-by: "?*"
     preconditions:
       any:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
     validate:
@@ -73,7 +73,7 @@ spec:
             kyverno.io/created-by: "?*"
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
       - key: "{{ request.oldObject.metadata.annotations.\"kyverno.io/created-by\" || '' }}"
