--- a/other/require_image_source/require-image-source.yaml
+++ b/other/require_image_source/require-image-source.yaml
@@ -28,7 +28,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: NotEquals
         value: DELETE
     validate:
