--- a/other/require_netpol/require_netpol.yaml
+++ b/other/require_netpol/require_netpol.yaml
@@ -25,7 +25,7 @@ spec:
         - Deployment
     preconditions:
       any:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: CREATE
     context:
