--- a/other/resolve_image_to_digest/resolve-image-to-digest.yaml
+++ b/other/resolve_image_to_digest/resolve-image-to-digest.yaml
@@ -25,7 +25,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: NotEquals
         value: DELETE
     mutate:
