--- a/other/restrict-ingress-wildcard/restrict-ingress-wildcard.yaml
+++ b/other/restrict-ingress-wildcard/restrict-ingress-wildcard.yaml
@@ -28,7 +28,7 @@ spec:
               - Ingress
       preconditions:
         all:
-        - key: "{{ request.operation }}"
+        - key: "{{ request.operation || 'BACKGROUND' }}"
           operator: AnyIn
           value: ["CREATE", "UPDATE"]
       validate:
