--- a/other/restrict_secrets_by_name/restrict-secrets-by-name.yaml
+++ b/other/restrict_secrets_by_name/restrict-secrets-by-name.yaml
@@ -27,7 +27,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
@@ -61,7 +61,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
@@ -92,7 +92,7 @@ spec:
         - Pod
     preconditions:
       all:
-      - key: "{{request.operation}}"
+      - key: "{{request.operation || 'BACKGROUND'}}"
         operator: In
         value:
         - CREATE
