--- a/psp-migration/check_supplemental_groups/check-supplemental-groups.yaml
+++ b/psp-migration/check_supplemental_groups/check-supplemental-groups.yaml
@@ -27,7 +27,7 @@ spec:
             - Pod
     preconditions:
       all:
-      - key: "{{ request.operation }}"
+      - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: In
         value:
         - CREATE
