check type only if set
Signed-off-by: André Bauer <monotek@users.noreply.github.com>

--- a/best-practices/restrict_node_port/restrict_node_port.yaml
+++ b/best-practices/restrict_node_port/restrict_node_port.yaml
@@ -26,4 +26,4 @@ spec:
       message: "Services of type NodePort are not allowed."
       pattern:
         spec:
-          type: "!NodePort"
+          =(type): "!NodePort"
