make periodSeconds optional
Signed-off-by: André Bauer <monotek@users.noreply.github.com>

--- a/best-practices/require_probes/require_probes.yaml
+++ b/best-practices/require_probes/require_probes.yaml
@@ -31,6 +31,6 @@ spec:
         spec:
           containers:
           - livenessProbe:
-              periodSeconds: ">0"
+              =(periodSeconds): ">0"
             readinessProbe:
-              periodSeconds: ">0"
+              =(periodSeconds): ">0"
