fix: change rule names
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/other/allowed-base-images/allowed-base-images.yaml
+++ b/other/allowed-base-images/allowed-base-images.yaml
@@ -20,7 +20,7 @@ metadata:
 spec:
   validationFailureAction: audit
   rules:
-  - name: check-base-image
+  - name: allowed-base-images
     match:
       any:
       - resources:
