--- a/other/require-base-image/require-base-image.yaml
+++ b/other/require-base-image/require-base-image.yaml
@@ -23,7 +23,7 @@ metadata:
 spec:
   validationFailureAction: audit
   rules:
-  - name: check-base-image
+  - name: require-base-image
     match:
       any:
       - resources:
