run pdb check only if replicas >= 3
Signed-off-by: André Bauer <andre.bauer@staffbase.com>

--- a/other/require_pdb/kyverno-test.yaml
+++ b/other/require_pdb/kyverno-test.yaml
@@ -2,11 +2,19 @@ name: require-pdb
 policies:
   - require_pdb.yaml
 resources:
-  - resource.yaml
+  - resource-pass.yaml
+  - resource-skip.yaml
 variables: values.yaml
 results:
   - policy: require-pdb
     rule: require-pdb
-    resource: nginx-deploy
+    resources:
+      - nginx-deploy-pass
     kind: Deployment
-    result: fail
+    result: pass
+  - policy: require-pdb
+    rule: require-pdb
+    resources:
+      - nginx-deploy-skip
+    kind: Deployment
+    result: skip
