--- a/other/require_pdb/resource-skip.yaml
+++ b/other/require_pdb/resource-skip.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deploy
+  name: nginx-deploy-skip
   labels:
     app: nginx
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -15,10 +15,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
-
-
-
+        - name: nginx
+          image: nginx:1.14.2
+          ports:
+            - containerPort: 80
