--- a/other/restrict_ingress_host/restrict_ingress_host.yaml
+++ b/other/restrict_ingress_host/restrict_ingress_host.yaml
@@ -7,21 +7,22 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Ingress
-    policies.kyverno.io/minversion: 1.3.2
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       An Ingress host is a URL at which services may be made available externally. In most cases,
       these hosts should be unique across the cluster to ensure no routing conflicts occur.
       This policy checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
-      It also ensures that only a single host may be specified in a given manifest.
+      It also ensures that only a single host may be specified in a given manifest.      
 spec:
   validationFailureAction: audit
   background: false
   rules:
     - name: check-single-host
       match:
-        resources:
-          kinds:
-            - Ingress
+        any:
+        - resources:
+            kinds:
+              - Ingress
       context:
         - name: hosts
           apiCall:
@@ -33,16 +34,17 @@ spec:
           operator: Equals
           value: CREATE
         - key: "{{ request.object.spec.rules[].host }}"
-          operator: In
+          operator: AnyIn
           value: "{{ hosts }}"
       validate:
         message: "The Ingress host name must be unique."
         deny: {}
     - name: deny-multiple-hosts
       match:
-        resources:
-          kinds:
-            - Ingress
+        any:
+        - resources:
+            kinds:
+              - Ingress
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
