Update `In` and `NotIn` operators to be 1.6+ safe
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/openshift/disallow-self-provisioner-binding/disallow-self-provisioner-binding.yaml
+++ b/openshift/disallow-self-provisioner-binding/disallow-self-provisioner-binding.yaml
@@ -53,5 +53,5 @@ spec:
         conditions:
           all:
           - key: self-provisioner
-            operator: In
+            operator: AnyIn
             value: "{{request.object.roleRef.name}}"
