--- a/other/add_default_resources/add-default-resources.yaml
+++ b/other/add_default_resources/add-default-resources.yaml
@@ -28,7 +28,7 @@ spec:
     preconditions:
       any:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
