--- a/other/enforce_resources_as_ratio/enforce-resources-as-ratio.yaml
+++ b/other/enforce_resources_as_ratio/enforce-resources-as-ratio.yaml
@@ -27,7 +27,7 @@ spec:
     preconditions:
       any:
       - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
