--- a/other/kubernetes_version_check/kubernetes-version-check.yaml
+++ b/other/kubernetes_version_check/kubernetes-version-check.yaml
@@ -27,9 +27,8 @@ spec:
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
-        value:
-        - CREATE
+        operator: Equals
+        value: CREATE
     context:
     - name: minorversion
       apiCall:
