--- a/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
+++ b/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
@@ -34,12 +34,12 @@ spec:
     preconditions:
       all:
       - key: "{{request.object.metadata.namespace}}"
-        operator: In
+        operator: AnyIn
         value:
         - "any-namespace"
         - "another-namespace"
       - key: "{{request.object.metadata.name}}"
-        operator: In
+        operator: AnyIn
         value:
         - "any-configmap-name-good"
         - "another-configmap-name"
@@ -49,7 +49,7 @@ spec:
         conditions:
           all:
           - key: "{{request.operation || 'BACKGROUND'}}"
-            operator: "In"
+            operator: AnyIn
             value:
-            - "UPDATE"
-            - "CREATE"
+            - UPDATE
+            - CREATE
