--- a/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
+++ b/other/limit-hostpath-type-pv/limit_hostpath_type_pv.yaml
@@ -24,7 +24,7 @@ spec:
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
