--- a/other/require_emptydir_requests_limits/require-emptydir-requests-limits.yaml
+++ b/other/require_emptydir_requests_limits/require-emptydir-requests-limits.yaml
@@ -31,7 +31,7 @@ spec:
         operator: GreaterThanOrEquals
         value: 1
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
