--- a/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
+++ b/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
@@ -13,7 +13,7 @@ metadata:
       vulnerability were ever discovered in the underlying container runtime, and an application 
       were able to break out of the container to the host, they would not be able to interact 
       with processes owned by other users, or from other applications, in other projects.
-    kyverno.io/kyverno-version: 1.4.3
+    kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: "1.20"
 spec:
   background: false
@@ -21,9 +21,10 @@ spec:
   rules:
   - name: require-unique-uid
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     context:
       - name: uidsAllPodsExceptSameOwnerAsRequestObject
         apiCall:
@@ -37,7 +38,7 @@ spec:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
         operator: Equals
-        value: "CREATE"
+        value: CREATE
     validate:
       message: "Only cluster-unique UIDs are allowed"
       deny:
@@ -45,5 +46,5 @@ spec:
         # this checks uids for ALL containers in any pod of the workload
           all:
           - key: "{{ request.object.spec.containers[].securityContext.to_string(runAsUser) }}"
-            operator: In
+            operator: AnyIn
             value: "{{ uidsAllPodsExceptSameOwnerAsRequestObject }}"
