--- a/other/restrict_secrets_by_name/restrict-secrets-by-name.yaml
+++ b/other/restrict_secrets_by_name/restrict-secrets-by-name.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Secrets by Name
     policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Pod, Secret
-    kyverno.io/kyverno-version: 1.5.1
+    kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
       Secrets often contain sensitive information and their access should be carefully controlled.
@@ -22,13 +22,14 @@ spec:
   rules:
   - name: safe-secrets-from-env
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
@@ -56,13 +57,14 @@ spec:
                     name: safe-*
   - name: safe-secrets-from-envfrom
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
@@ -87,13 +89,14 @@ spec:
                 name: safe-*
   - name: safe-secrets-from-volumes
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
