--- a/velero/block-velero-restore/block-velero-restore.yaml
+++ b/velero/block-velero-restore/block-velero-restore.yaml
@@ -18,16 +18,17 @@ spec:
   rules:
   - name: block-velero-restore-to-protected-namespace
     match:
-      resources:
-        kinds:
-        - velero.io/v1/Restore
+      any:
+      - resources:
+          kinds:
+          - velero.io/v1/Restore
     validate:
       message: "Warning! Restore to protected namespace: {{request.object.spec.namespaceMapping | values(@)}} is not allowed!"
       deny:
         conditions:
           any:
             - key: "{{request.object.spec.namespaceMapping | values(@)}}"
-              operator: In
+              operator: AnyIn
               value:
               - kube-system
               - kube-node-lease
