--- a/other/advanced_restrict_image_registries/advanced-restrict-image-registries.yaml
+++ b/other/advanced_restrict_image_registries/advanced-restrict-image-registries.yaml
@@ -43,7 +43,7 @@ spec:
       preconditions:
         any:
         - key: "{{request.operation || 'BACKGROUND'}}"
-          operator: In
+          operator: AnyIn
           value:
           - CREATE
           - UPDATE
