--- a/other/allowed_pod_priorities/allowed_pod_priorities.yaml
+++ b/other/allowed_pod_priorities/allowed_pod_priorities.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Allowed Pod Priorities
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.3.0
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       A Pod PriorityClass is used to provide a guarantee on the scheduling of a Pod relative to others.
@@ -25,12 +25,13 @@ spec:
           name: allowed-pod-priorities
           namespace: default
     match:
-      resources:
-        kinds:
-        - Deployment
-        - DaemonSet
-        - StatefulSet
-        - Job
+      any:
+      - resources:
+          kinds:
+          - Deployment
+          - DaemonSet
+          - StatefulSet
+          - Job
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.template.spec.priorityClassName }} is not in the list
@@ -39,7 +40,7 @@ spec:
         conditions:
           any:
           - key: "{{ request.object.spec.template.spec.priorityClassName }}"
-            operator: NotIn
+            operator: AnyNotIn
             value:  "{{ podprioritydict.data.{{request.namespace}} }}"
   - name: validate-pod-priority-pods
     context:
@@ -48,9 +49,10 @@ spec:
           name: allowed-pod-priorities
           namespace: default
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.priorityClassName }} is not in the list
@@ -59,7 +61,7 @@ spec:
         conditions:
           any:
           - key: "{{ request.object.spec.priorityClassName }}"
-            operator: NotIn
+            operator: AnyNotIn
             value:  "{{ podprioritydict.data.{{request.namespace}} }}"
   - name: validate-pod-priority-cronjob
     context:
@@ -68,9 +70,10 @@ spec:
           name: allowed-pod-priorities
           namespace: default
     match:
-      resources:
-        kinds:
-        - CronJob
+      any:
+      - resources:
+          kinds:
+          - CronJob
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }} is not in the list
@@ -79,5 +82,5 @@ spec:
         conditions:
           any:
           - key: "{{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }}"
-            operator: NotIn
+            operator: AnyNotIn
             value:  "{{ podprioritydict.data.{{request.namespace}} }}"
