--- a/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
+++ b/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Ensure Read Only hostPath
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.5.0
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kyverno-version: 1.6.2
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
@@ -23,13 +23,14 @@ spec:
   rules:
   - name: ensure-hostpaths-readonly
     match:
-      resources:
-        kinds:
-          - Pod
+      any:
+      - resources:
+          kinds:
+            - Pod
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
