--- a/other/limit-hostpath-vols/limit-hostpath-vols.yaml
+++ b/other/limit-hostpath-vols/limit-hostpath-vols.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Limit hostPath Volumes to Specific Directories
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.5.0
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kyverno-version: 1.6.2
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
@@ -32,7 +32,7 @@ spec:
         operator: GreaterThanOrEquals
         value: 1
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
