--- a/other/prepend_image_registry/prepend_image_registry.yaml
+++ b/other/prepend_image_registry/prepend_image_registry.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Prepend Image Registry
     policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.5.0
+    policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kyverno-version: 1.5.1
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
@@ -21,13 +21,14 @@ spec:
   rules:
   - name: prepend-registry-containers
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
@@ -41,13 +42,14 @@ spec:
               image: registry.io/{{ images.containers."{{element.name}}".path}}:{{images.containers."{{element.name}}".tag}}
   - name: prepend-registry-initcontainers
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
