--- a/other/require_unique_external_dns/require_unique_external_dns.yaml
+++ b/other/require_unique_external_dns/require_unique_external_dns.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Service
     kyverno.io/kyverno-version: 1.5.1
     kyverno.io/kubernetes-version: "1.21"
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       ExternalDNS, part of Kubernetes SIGs, triggers the creation of external DNS records in supported
       providers when the annotation`external-dns.alpha.kubernetes.io/hostname` is present. Like with
@@ -21,11 +21,12 @@ spec:
   rules:
     - name: ensure-valid-externaldns-annotation
       match:
-        resources:
-          kinds:
-            - Service
-          annotations:
-            external-dns.alpha.kubernetes.io/hostname: "*"
+        any:
+        - resources:
+            kinds:
+              - Service
+            annotations:
+              external-dns.alpha.kubernetes.io/hostname: "*"
       context:
         # Looks up external DNS entries.
         - name: alldns
@@ -35,7 +36,7 @@ spec:
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: In
+          operator: AnyIn
           value:
             - CREATE
             - UPDATE
@@ -48,5 +49,5 @@ spec:
             all:
               # Deny if "external-dns.alpha.kubernetes.io/hostname" annotation value is already taken
               - key: "{{request.object.metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\"}}"
-                operator: In
+                operator: AnyIn
                 value: "{{alldns}}"
