--- a/psp-migration/check_supplemental_groups/check-supplemental-groups.yaml
+++ b/psp-migration/check_supplemental_groups/check-supplemental-groups.yaml
@@ -28,7 +28,7 @@ spec:
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: In
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
