Leverage Preconditions to optimize Kubeops config-syncer-secret-generation-from-rancher-capi #439 Signed-off-by: ron1 <ron18219@gmail.com>

--- a/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
+++ b/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
@@ -30,6 +30,10 @@ spec:
           namespaces:
           - fleet-local
     context:
+    - name: currentKubeconfigData
+      apiCall:
+        urlPath: "/api/v1/namespaces/kubed/secrets"
+        jmesPath: "items[?metadata.name == 'kubed'] | [0].data.kubeconfig || ''"
     - name: secretList
       apiCall:
         urlPath: "/api/v1/namespaces/{{request.object.metadata.namespace}}/secrets"
@@ -39,7 +43,7 @@ spec:
         value: |
           {{ secretList | [].{
               "name": metadata.name,
-              "cluster": data.value | base64_decode(@) | parse_yaml(@).clusters[].cluster[] | [0] }
+              "cluster": data.value | base64_decode(@) | parse_yaml(@).clusters[].cluster[] | [0] } || '\[\]'
           }}
         jmesPath: 'to_string(@)'
     - name: kubeconfigUsersData
@@ -47,7 +51,7 @@ spec:
         value: |
           {{ secretList | [].{
               "name": metadata.name,
-              "user": data.value | base64_decode(@) | parse_yaml(@).users[].user[] | [0] }
+              "user": data.value | base64_decode(@) | parse_yaml(@).users[].user[] | [0] } || '\[\]'
           }}
         jmesPath: 'to_string(@)'
 #    - name: kubeconfigContextsData # Enable when Kyverno variable substitution bug is resolved
@@ -63,7 +67,7 @@ spec:
         value: |
           {{ secretList | [].{
               "name": metadata.name,
-              "context": ['CLUSTER_BEGIN', metadata.name, 'CLUSTER_END', 'USER_BEGIN', metadata.name, 'USER_END'] }
+              "context": ['CLUSTER_BEGIN', metadata.name, 'CLUSTER_END', 'USER_BEGIN', metadata.name, 'USER_END'] } || '\[\]'
           }}
         jmesPath: "to_string(@) | replace_all(@, '[\"CLUSTER_BEGIN\",', '{\"cluster\":') | replace_all(@, '\"CLUSTER_END\",\"USER_BEGIN\",', '\"user\":') | replace_all(@, ',\"USER_END\"]', '}')"
     - name: kubeconfigData
@@ -73,17 +77,22 @@ spec:
             "apiVersion": "v1",
             "kind": "Config",
             "clusters": {{ kubeconfigClustersData }},
-            "users": {{ kubeconfigUsersData }},
-            "contexts": {{ kubeconfigContextsData }}
+            "contexts": {{ kubeconfigContextsData }},
+            "users": {{ kubeconfigUsersData }}
           }
         jmesPath: 'to_string(@)'
+    preconditions:
+      any:
+      - key: '{{ kubeconfigData || '''' | base64_encode(@) }}'
+        operator: NotEquals
+        value: '{{ currentKubeconfigData }}'
     generate:
       synchronize: true
       apiVersion: v1
       kind: Secret
       name: kubed
-      namespace: kube-system
+      namespace: kubed
       data:
         type: Opaque
         data:
-          kubeconfig: "{{ kubeconfigData | base64_encode(@) }}"
+          kubeconfig: '{{ kubeconfigData || '''' | base64_encode(@) }}'
