fix: policy name and annotations
Signed-off-by: Ugur Can Ozturk <57688057+ugur99@users.noreply.github.com>

--- a/other/dns-policy-and-dns-config/kyverno-test.yaml
+++ b/other/dns-policy-and-dns-config/kyverno-test.yaml
@@ -1,11 +1,11 @@
-name: dns-policy
+name: change-dns-config-policy
 policies:
   - dns-policy-and-dns-config.yaml
 resources:
   - resource.yaml
 variables: variables.yaml
 results:
-  - policy: dns-policy
+  - policy: change-dns-config-policy
     rule: dns-policy
     resource: myapp-pod
     patchedResource: patchedResource.yaml
