--- a/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
+++ b/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
@@ -1,19 +1,20 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: dns-policy
+  name: change-dns-config-policy
   annotations:
     policies.kyverno.io/title: Change DNS Config and Policy
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.7.3
+    kyverno.io/kyverno-version: 1.8.1
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The Default DNS policy in Kubernetes gives the flexibility of service 
       access; however, it costs some latency on a high scale, and it needs to 
       be optimized. This policy helps us to optimize the performance of DNS 
-      queries by setting DNS Options, nodelocalDNS IP, and search Domains. 
+      queries by setting DNS Options, nodelocalDNS IP, and search Domains.
+      This policy can be applied for the clusters provisioned by kubeadm.
 spec:
   rules:
   - name: dns-policy
