fix missing background: false for not background capable policy
Signed-off-by: Maximilian Rink <maximilian.rink@telekom.de>

--- a/psa/deny-privileged-profile/deny-privileged-profile.yaml
+++ b/psa/deny-privileged-profile/deny-privileged-profile.yaml
@@ -21,6 +21,7 @@ metadata:
       `pod-security.kubernetes.io/enforce=privileged`.
 spec:
   validationFailureAction: audit
+  background: false
   rules:
   - name: check-privileged
     match:
