handle missing labels in insert-pod-antiaffinity
Signed-off-by: Marc Brugger <m.brugger@bison-group.com>

--- a/other/create_pod_antiaffinity/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity/create_pod_antiaffinity.yaml
@@ -21,7 +21,7 @@ spec:
       preconditions:
         # This precondition selects Pods with the label `app` defined
         all:
-        - key: "{{request.object.spec.template.metadata.labels.app}}"
+        - key: "{{request.object.spec.template.metadata.labels.app || ''}}"
           operator: NotEquals
           value: ""
       # Mutates the Deployment resource to add fields.
