--- a/other/create_pod_antiaffinity/kyverno-test.yaml
+++ b/other/create_pod_antiaffinity/kyverno-test.yaml
@@ -6,13 +6,20 @@ resources:
 results:
   - policy: insert-pod-antiaffinity
     rule: insert-pod-antiaffinity
-    resource: mydeploy
-    patchedResource: patchedResource1.yaml
+    resources:
+      - mydeploy
+    patchedResource: patchedResource.yaml
     kind: Deployment
     result: pass
   - policy: insert-pod-antiaffinity
     rule: insert-pod-antiaffinity
-    resource: myapp-pod
-    patchedResource: patchedResource2.yaml
+    resources:
+      - myapp-pod
     kind: Pod
+    result: skip
+  - policy: insert-pod-antiaffinity
+    rule: insert-pod-antiaffinity
+    resources:
+      - mydeploy-missing-label
+    kind: Deployment
     result: skip
