--- a/other/create_pod_antiaffinity/resource.yaml
+++ b/other/create_pod_antiaffinity/resource.yaml
@@ -27,3 +27,21 @@ spec:
   containers:
   - name: nginx
     image: nginx:latest
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mydeploy-missing-label
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      other-app: myapp
+  template:
+    metadata:
+      labels:
+        other-app: myapp
+    spec:
+      containers:
+        - image: nginx:latest
+          name: nginx
