updates to check-env-vars
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/check-env-vars/kyverno-test.yaml
+++ b/other/check-env-vars/kyverno-test.yaml
@@ -13,12 +13,8 @@ results:
   ###### Pods - Good
   - policy: validate-env-vars
     rule: check-disable-opa
-    resource: pod-with-opa-disabled
+    resources:
+    - pod-with-opa-disabled
+    - pod-without-opa-env
     kind: Pod
     result: pass
-  - policy: validate-env-vars
-    rule: check-disable-opa
-    resource: pod-without-opa-env
-    kind: Pod
-    result: pass
-
